# CPP-Typed-Scanner

./: .dockerignore  .gitignore  CMakeLists.txt  README.md  bench_from_chars  bench_from_chars.cpp  bench_malloc  bench_malloc.cpp  bench_strptime  bench_strptime.cpp
bench/: arena_alloc_bench.cpp  policy_bench.cpp  tokenizer_bench.cpp
bench_out/: arena.txt  from_chars.txt  malloc.txt  policy.txt  strptime.txt  tokenizer.txt
configs/: config.toml  pipeline.toml
data/samples/: bigints.csv  nulls.csv  quoted_edges.csv  simple.csv  simple.jsonl  unicode.jsonl
docker/: Dockerfile  bench.sh  docker-compose.yml
docker/scripts/: airflow-init.sh  entrypoint.sh  mc-init.sh  mc_init.sh
docker/webhooks/: Dockerfile  app.py
include/typed_scanner/: arena.hpp  artifact_writer.hpp  chunk_reader.hpp  date_parse.hpp  etag_state.hpp  http_server.hpp  metrics.hpp  mustache_renderer.hpp  parse_policy.hpp  path_utils.hpp  record_view.hpp  run_json.hpp  token_csv_fsm.hpp  token_jsonl_simdjson.hpp
orchestrators/airflow/: requirements.txt
orchestrators/airflow/dags/: typed_scanner_dag.py
orchestrators/prefect/: flow.py  requirements.txt
scripts/: generate_large_samples.py  run_local.sh  run_test.sh  slugify.py
src/main/: main.cpp
src/metrics/: metrics_registry.cpp  sys_counters.cpp
src/policy/: date_parse.cpp  parse_policy.cpp
src/render/: artifact_writer.cpp  mustache_renderer.cpp  run_json_writer.cpp
src/scanner/: arena.cpp  chunk_reader.cpp  record_view.cpp  token_csv_fsm.cpp  token_jsonl_simdjson.cpp
src/server/: http_server.cpp
src/util/: etag_state.cpp  path_utils.cpp
templates/: report.mustache
templates/partials/: cards.mustache  charts.mustache  tables.mustache
tests/data/: bad.jsonl  edge_delimiters.csv  malformed.csv  multi_line_quotes.csv  utf8.csv
tests/intergration/: test_end_to_end_csv.cpp  test_end_to_end_jsonl.cpp  test_fixtures_from_dir.cpp  test_http_server.cpp
tests/unit/: test_chunk_reader.cpp  test_csv_fsm.cpp  test_jsonl_tokenizer.cpp  test_parse_policy.cpp  test_record_view.cpp  test_run_json.cpp
web/css/: report.css
web/js/: report.js
